2012-03-17  Tobias Burnus  <burnus@net-b.de>

	PR fortran/52585
	* gfortran.dg/proc_ptr_36.f90: New.

2012-03-16  Martin Jambor  <mjambor@suse.cz>

	* gcc.dg/misaligned-expand-1.c: New test.
	* gcc.dg/misaligned-expand-3.c: Likewise.

2012-03-16  Richard Guenther  <rguenther@suse.de>
	Kai Tietz  <ktietz@redhat.com>

	PR middle-end/48814
	* gcc.c-torture/execute/pr48814-1.c: New test.
	* gcc.c-torture/execute/pr48814-2.c: New test.
	* gcc.dg/tree-ssa/assign-1.c: New test.
	* gcc.dg/tree-ssa/assign-2.c: New test.
	* gcc.dg/tree-ssa/assign-3.c: New test.

2012-03-16  Richard Guenther  <rguenther@suse.de>

	* gnat.dg/specs/pack7.ads: New testcase.

2012-03-15  Jakub Jelinek  <jakub@redhat.com>

	PR target/52568
	* gcc.dg/torture/vshuf-4.inc: Add two new tests.
	* gcc.dg/torture/vshuf-8.inc: Likewise.
	* gcc.dg/torture/vshuf-16.inc: Likewise.
	* gcc.dg/torture/vshuf-32.inc: Likewise.

2012-03-15  Jason Merrill  <jason@redhat.com>

	* g++.dg/torture/pr52582.C: New.

2012-03-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* lib/fortran-modules.exp: New file which was forgotten in r185430.

2012-03-15  Ira Rosen  <irar@il.ibm.com>
	    Ulrich Weigand  <ulrich.weigand@linaro.org>

	* gcc.dg/vect/slp-cond-3.c: New test.
	* gcc.dg/vect/slp-cond-4.c: New test.

2012-03-15  Ira Rosen  <irar@il.ibm.com>
	    Ulrich Weigand  <ulrich.weigand@linaro.org>

	* gcc.dg/vect/bb-slp-pattern-1.c: New test.
	* gcc.dg/vect/bb-slp-pattern-2.c: New test.

2012-03-15  Janne Blomqvist  <jb@gcc.gnu.org>

        PR libfortran/52434
        PR libfortran/48878
        PR libfortran/38199
        * gfortran.dg/edit_real_1.f90: Don't assume roundTiesToAway.
        * gfortran.dg/round_1.f03: Likewise.

2012-03-15  Jakub Jelinek  <jakub@redhat.com>
	    Andrew Pinski  <apinski@cavium.com>

	PR middle-end/52592
	* gcc.dg/pr52592.c: New test.

2012-03-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* gfortran.fortran-torture/compile/compile.exp: Simplify.